05.deployment/03.istio/07.security/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mouse-catalog-routing-service
spec:
  hosts:
    - "*"
  http:
    - name: "catalog route"
      match:
        - uri:
            prefix: /mice/
        - uri:
            prefix: /mice
      route:
        - destination:
            host: mouse-catalog
      rewrite:
        uri: "/"
    - name: "reviews route"
      match:
        - uri:
            prefix: /reviews/
        - uri:
            prefix: /reviews
      route:
        - destination:
            host: mouse-reviews
      rewrite:
        uri: "/"
  gateways:
    - mouse-gateway
